# numerical-methods-2025

./: README.md  lab1-Wprowadzenie-student.ipynb  lab2-Błędy numeryczne-student.ipynb  lab3-Procesy_Iteracyjne-Student.ipynb  lab4-student.ipynb  lab5-Rozkład QR, Interpolacja.ipynb  lab8-SVD.ipynb  lab9-Optymalizacja.ipynb  main.py  pyproject.toml
Assignment 1/: Zadanie_domowe_1.ipynb  Zadanie_domowe_1_solution.ipynb
Assignment 2/: Zadanie_domowe_2-2 2.ipynb  Zadanie_domowe_2-2 2_solution beta.ipynb  Zadanie_domowe_2-2 2_solution.ipynb
lab6-Aproximation/: lab6-Aproksymacja liniowa.ipynb
lab7-Nonlinear aproximation/: lab7-Nonlinear aproximation.ipynb  raba lepsza wersja.txt
